# character-screenshotter

./: .gitignore  README.md  RUN.bat  SETUP.bat  character_detector.py  frame_extractor.py  pyproject.toml  requirements.txt  screenshotter.py  screenshotter_gui.py  vidframe.py  vidframe_gui.py
docs/: PLAN_global-cli-and-tui.md
gui/: detect_page.py  extract_page.py  log_console.py  path_edit.py  worker.py
