[project]
name = "character-screenshotter"
version = "0.2.0"
description = "Extract frames or detect anime characters from videos. CLI, TUI, and GUI."
requires-python = ">=3.10"
dependencies = [
    "opencv-python",
    "numpy",
    "Pillow",
    "imagehash",
    "tqdm",
    "InquirerPy",
    "PySide6",
]

[project.optional-dependencies]
detect = [
    "torch",
    "torchvision",
    "tensorflow<2.17; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "tensorflow; sys_platform != 'darwin' or platform_machine != 'x86_64'",
]

[project.scripts]
gui     = "screenshotter_gui:main"
tui     = "screenshotter:main"
extract = "frame_extractor:main"
detect  = "character_detector:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gui"]
py-modules = [
    "screenshotter",
    "screenshotter_gui",
    "frame_extractor",
    "character_detector",
]
